Font sizing tweaks to prevent overlap

--- a/css/sifter-desktop.css
+++ b/css/sifter-desktop.css
@@ -215,7 +215,7 @@ html,body
   .sifter-categories
   {
     width: 525px;
-    font-size: 0.8em;
+    font-size: 0.7em;
     margin: 1em;
     margin-left: 0;
   }
@@ -286,7 +286,7 @@ html,body
   }
 
 /* catch the nexus 7 shrunken screen */
-@media only screen and (max-height: 640px)
+@media only screen and (max-height: 740px)
 {
   .sifter-popdown-footer
   {
